create github pages

--- a/page1.html
+++ b/page1.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-2btn-6" data-rv-view="39">
+  <section id="dropdown-menu-2btn-6" data-rv-view="19">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -43,7 +43,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section mbr-after-navbar" id="header3-a" data-rv-view="43">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section mbr-after-navbar" id="header3-a" data-rv-view="23">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -54,7 +54,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-9" data-rv-view="45">
+<section class="mbr-section" id="content1-9" data-rv-view="25">
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>We at nature's future cannot watch our earth be destroyed by wildfires or other natural disasters we also can't watch are trees getting torn apart from their beautiful and amazing strong roots. It's sad to see our trees die, they give us oxygen/fresh air to breathe and all we do is kill them we need to STOP! and take action. Take a moment step outside your house &amp; look at all those beautiful trees right in front of you now imagine that in 10 more years those trees getting torn down or burned, at first there will be no oxygen/fresh air then we humans die
@@ -64,7 +64,7 @@
     </div>
 </section>
 
-<footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-7" data-rv-view="41" style="background-color: rgb(255, 255, 255);">
+<footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-7" data-rv-view="21" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 24.6px; padding-bottom: 24.6px;">
