--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-2btn-b" data-rv-view="46">
+  <section id="dropdown-menu-2btn-b" data-rv-view="26">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -43,7 +43,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="form1-e" data-rv-view="50" style="background-color: rgb(239, 239, 239);">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="form1-e" data-rv-view="30" style="background-color: rgb(239, 239, 239);">
     
     <div class="mbr-section__container mbr-section__container--std-padding container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -57,7 +57,7 @@
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
-                            <input type="hidden" value="pR4LGDGuuLueUWilimA4nUNfPhETje5CLuvCbrNRUAIKQeQTB3hEigJ3PWJCLw3PgnVowGIvhYwYO6n8t2bkcR4IctGbjvq//4Nxs25q6jN5ALfgLeo60qxiW6u7st+v" data-form-email="true">
+                            <input type="hidden" value="tHvsb5sUIe78q4n0SQ99rhyIUszwbeWE6IKYIywKpzLZ3ev59nQE4b8hgQ562Xm/jj72VJP95XhR5jULjhw4zPZYHcwW6OOQTFWPZ6sek5fs+4/aAlymR6HIU87WvZtt" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
@@ -79,7 +79,7 @@
     </div>
 </section>
 
-<footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-c" data-rv-view="48" style="background-color: rgb(255, 255, 255);">
+<footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-c" data-rv-view="28" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 24.6px; padding-bottom: 24.6px;">
