--- a/page3.html
+++ b/page3.html
@@ -21,7 +21,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-2btn-f" data-rv-view="59">
+  <section id="dropdown-menu-2btn-f" data-rv-view="39">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header2-h" data-rv-view="63" style="background-color: rgb(76, 105, 114);">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header2-h" data-rv-view="43" style="background-color: rgb(76, 105, 114);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -62,7 +62,7 @@
     </div>
 </section>
 
-<footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-g" data-rv-view="61" style="background-color: rgb(255, 255, 255);">
+<footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-g" data-rv-view="41" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container">
         <div class="mbr-footer mbr-footer--wysiwyg row" style="padding-top: 24.6px; padding-bottom: 24.6px;">
